[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/props/signpost.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.0555, 35.4805 )

[node name="DialogueTrigger" type="Area2D"]
position = Vector2( -1, 5 )
collision_mask = 2
monitorable = false
script = ExtResource( 1 )
dialogue = "Dialogue Clicked"

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2( 21.076, -30.3944 )
scale = Vector2( 0.888505, 0.969388 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_signpost_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_signpost_body_exited"]
